# clCPP

./: .clang-tidy  .gitattributes  CMakeLists.txt  LICENSE  README.md
include/: cl.hpp
